--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(#8CC0DE,#FF9B9B ,#FAF0D7 );
+  background-repeat: no-repeat;
+  background-size: contain;
+  min-height: 100vh;
+  max-height: auto;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@media only screen and (min-width:350px) and (max-width:550px){
+  body{
+    min-height: 100vh;
+  }
+}
+@media only screen and (min-width:700px) and (max-width:920px){
+  body{
+    min-height: 100vh;
+  }
 }
